# ray-playground

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: 01_train.py  02_predict.py
